fix: Settings > Bank & CC: vert align trash icon

--- a/styles/project/components/_icons.scss
+++ b/styles/project/components/_icons.scss
@@ -96,6 +96,9 @@
     width: 20px;
     background-size: 20px 20px;
   }
+  &.mod-middle {
+    top: 3px;
+  }
 }
 
 .icon-calendar {
